--- a/index.html
+++ b/index.html
@@ -3,12 +3,18 @@
 <html>
 <head>
 <meta charset='utf-8'>
-<title>工藤千寛の公式ホームページ</title>
+<title>This is Darjeeling's Portfolio.</title>
 </head>
 
 <body>
 
-<p>Hello World</p>
+<h1>Welcome to Darjeeling's Portfolio!!</h1>
+  
+  <h2>About me</h2>
+  <h2>Skill Stack</h2>
+  <h2>Hobby</h2>
+  <h2>Contact me</h2>
+  
 
 </body>
 
