--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <html>
   <head>
     <meta charset='utf-8'>
+    <link rel="stylesheet" type="text/css" href="style.css">
     <title>This is Darjeeling's Portfolio.</title>
   </head>
 
