--- a/index.html
+++ b/index.html
@@ -12,12 +12,21 @@
     <header>
       <a href="#" id="DARJEELING TEA">Logo</a>
     </header>
+    
+    <section class="content">
+      <div class="inner">
+        <div class="about">
+          <h1>Welcome to Darjeeling's Portfolio!!</h>
+          <p>I'm a student engineer, this is my portfolio site!!</p>
+        </div>
+      </div>
+    </section>
 
     <section id="hero1" class="hero">
       <div class="inner">
         <div class="copy">
-          <h1>Welcome to Darjeeling's Portfolio!!</h>
-          <p>I'm a student engineer, this is my portfolio site!!</p>
+          <h1>Abstruct</h1>
+          <p>abst</p>
         </div>
       </div>
     </section>
@@ -25,8 +34,8 @@
     <section class="content">
       <div class="inner">
         <div class="about">
-          <h1>Abstruct</h1>
-          <p>abst</p>
+          <h1>About Me</h1>
+          <p>I will introduce my brief career！！</p>
         </div>
       </div>
     </section>
@@ -34,8 +43,8 @@
     <section id="hero2" class="hero">
       <div class="inner">
         <div class="copy">
-          <h1>About Me</h1>
-          <p>I will introduce my brief career！！</p>
+          <h1>Abstruct</h1>
+          <p>abst</p>
         </div>
       </div>
     </section>
@@ -43,8 +52,8 @@
     <section class="content">
       <div class="inner">
         <div class="about">
-          <h1>Abstruct</h1>
-          <p>abst</p>
+          <h1>Skill Stack!</h>
+          <p>I have these knowledge and skills!!</p>
         </div>
       </div>
     </section>
@@ -52,8 +61,8 @@
     <section id="hero3" class="hero">
       <div class="inner">
         <div class="copy">
-          <h1>Skill Stack!</h>
-          <p>I have these knowledge and skills!!</p>
+          <h1>SkillStack</h1>
+          <p>sklstk</p>
         </div>
       </div>
     </section>
@@ -61,8 +70,8 @@
     <section class="content">
       <div class="inner">
         <div class="skillstack">
-          <h1>SkillStack</h1>
-          <p>sklstk</p>
+          <h1>Hobbies</h>
+          <p>I have some bobbies!!</p>
         </div>
       </div>
     </section>
@@ -70,8 +79,8 @@
     <section id="hero4" class="hero">
       <div class="inner">
         <div class="copy">
-          <h1>Hobbies</h>
-          <p>I have some bobbies!!</p>
+          <h1>hobbies</h1>
+          <p>hby</p>
         </div>
       </div>
     </section>
@@ -79,8 +88,8 @@
     <section class="content">
       <div class="inner">
         <div class="hobby">
-          <h1>hobbies</h1>
-          <p>hby</p>
+          <h1>Contact Me</h>
+          <p>Please contact me from here!!</p>
         </div>
       </div>
     </section>
@@ -88,15 +97,6 @@
 <section id="hero5" class="hero">
       <div class="inner">
         <div class="copy">
-          <h1>Contact Me</h>
-          <p>Please contact me from here!!</p>
-        </div>
-      </div>
-    </section>
-
-    <section class="content">
-      <div class="inner">
-        <div class="contact">
           <h1>Contact Me</h1>
           <p>ctct</p>
         </div>
